--- a/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.html.twig
@@ -48,7 +48,7 @@
                                 {% block sw_select_results_empty %}
                                     <div v-if="results.length <= 0" class="sw-select__results-empty-message">
                                         {% block sw_select_results_empty_text %}
-                                            {{ $tc('sw-category.general.productAssignmentEmptyText') }}
+                                            {{ $tc('sw-category.base.products.productAssignmentEmptyText') }}
                                         {% endblock %}
                                     </div>
                                 {% endblock %}
