--- a/Resources/administration/src/module/sw-cms/component/sw-cms-block-config/sw-cms-block-config.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-block-config/sw-cms-block-config.scss
@@ -1,7 +1,13 @@
+@import "~scss/variables";
+
 .sw-cms-block-config {
     padding: 25px;
 
     .sw-media-compact-upload{
         margin-bottom: 22px;
+    }
+
+    .sw-media-upload .sw-media-upload__dropzone {
+        border: 1px solid $color-steam-cloud;
     }
 }
