--- a/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-detail/sw-settings-user-detail.html.twig
@@ -1,30 +1,30 @@
 {% block sw_settings_user_detail %}
     <sw-page class="sw-settings-user-detail">
         {% block sw_settings_user_detail_header %}
-            <template slot="smart-bar-header">
+            <template v-slot:smart-bar-header>
                 <h2 >{{ username }}</h2>
             </template>
         {% endblock %}
 
         {% block sw_settings_user_detail_actions %}
-            <template slot="smart-bar-actions">
+            <template v-slot:smart-bar-actions>
                 {% block sw_settings_user_detail_actions_cancel %}
                     <sw-button :routerLink="{ name: 'sw.settings.user.list' }">
-                        {{ $tc('sw-manufacturer.detail.buttonCancel') }}
+                        {{ $tc('sw-settings-user.user-detail.labelButtonCancel') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_settings_user_detail_actions_save %}
                     <sw-button :disabled="isLoading || isError" class="sw-settings-user-detail__save-action" variant="primary"
                                @click.prevent="onSave">
-                        {{ $tc('sw-manufacturer.detail.buttonSave') }}
+                        {{ $tc('sw-settings-user.user-detail.labelButtonSave') }}
                     </sw-button>
                 {% endblock %}
             </template>
         {% endblock %}
 
         {% block sw_settings_user_detail_content %}
-            <template slot="content">
+            <template v-slot:content>
                 <sw-card-view>
                     {% block sw_settings_user_detail_content %}
                         <sw-card :title="$tc('sw-settings-user.user-detail.labelCard')">
@@ -79,7 +79,7 @@
                                                 :uploadTag="user.id"
                                                 :allowMultiSelect="false"
                                                 variant="regular"
-                                                :defaultFolder="user.getEntityName()"
+                                                defaultFolder="user"
                                                 @media-upload-remove-image="onUnlinkLogo">
                                         </sw-media-upload>
                                     {% endblock %}
@@ -120,7 +120,7 @@
                                     {% endblock %}
 
                                     {% block sw_settings_user_detail_password_modal_footer %}
-                                        <template slot="modal-footer">
+                                        <template v-slot:modal-footer>
                                             {% block sw_settings_user_detail_password_modal_actions_cancel %}
                                                 <sw-button @click="onClosePasswordModal"
                                                            size="small">
@@ -141,8 +141,175 @@
                                 </sw-modal>
                             {% endblock %}
                         </sw-card>
+
+                        <sw-card :title="$tc('sw-settings-user.user-detail.labelIntegrationsCard')">
+                            {% block sw_settings_user_detail_add_key %}
+                                <sw-button @click="addAccessKey"
+                                           variant="primary"
+                                           size="small">
+                                    {{ $tc('sw-settings-user.user-detail.addAccessKey') }}
+                                </sw-button>
+                            {% endblock %}
+
+                            {% block sw_settings_user_detail_key_grid %}
+                                <sw-data-grid
+                                        :dataSource="integrations"
+                                        :columns="integrationColumns"
+                                        identifier="user-grid"
+                                        :showSettings="true"
+                                        :isLoading="isLoading"
+                                        @column-sort="onSortColumn">
+
+                                    {% block sw_settings_user_detail_key_grid_column_write_access %}
+                                        <template v-slot:column-writeAccess="{ item }">
+                                            <sw-label :ghost="true" :small="true" :caps="true" :light="true">{{ $tc('sw-settings-user.user-detail.readAccess') }}</sw-label>
+                                            <sw-label v-if="item.writeAccess" :ghost="true" :small="true" :caps="true" :light="true">{{ $tc('sw-settings-user.user-detail.writeAccess') }}</sw-label>
+                                        </template>
+                                    {% endblock %}
+
+                                    {% block sw_settings_user_detail_grid_columns_actions %}
+                                        <template v-slot:actions="{ item }">
+                                            {% block sw_settings_user_detail_grid_columns_actions_edit %}
+                                                <sw-context-menu-item class="sw-product-list__edit-action" @click="onShowDetailModal(item.id)">
+                                                    {{ $tc('sw-settings-user.user-detail.contextMenuEdit') }}
+                                                </sw-context-menu-item>
+                                            {% endblock %}
+
+                                            {% block sw_settings_user_detail_grid_columns_actions_delete %}
+                                                <sw-context-menu-item @click="showDeleteModal = item.id" variant="danger">
+                                                    {{ $tc('sw-settings-user.user-detail.contextMenuDelete') }}
+                                                </sw-context-menu-item>
+                                            {% endblock %}
+                                        </template>
+                                    {% endblock %}
+                                </sw-data-grid>
+                            {% endblock %}
+                        </sw-card>
                     {% endblock %}
                 </sw-card-view>
+
+                {% block sw_settings_user_detail_grid_inner_slot_delete_modal %}
+                    <sw-modal v-if="showDeleteModal"
+                              :title="$tc('sw-settings-user.user-detail.modal.deleteModalTitle')"
+                              @modal-close="onCloseDeleteModal">
+                        {% block sw_settings_user_detail_grid_inner_slot_delete_modal_confirmtext %}
+                            <p>
+                                {{ $tc('sw-settings-user.user-detail.modal.confirmDelete') }}
+                            </p>
+                        {% endblock %}
+
+                        {% block sw_settings_user_detail_grid_inner_slot_delete_modal_footer %}
+                            <template v-slot:modal-footer>
+                                <sw-button size="small"
+                                           @click="onCloseDeleteModal">
+                                    {{ $tc('sw-settings-user.user-detail.modal.buttonCancel') }}
+                                </sw-button>
+                                <sw-button size="small"
+                                           variant="primary"
+                                           @click="onConfirmDelete(showDeleteModal)">
+                                    {{ $tc('sw-settings-user.user-detail.modal.buttonDelete') }}
+                                </sw-button>
+                            </template>
+                        {% endblock %}
+                    </sw-modal>
+                {% endblock %}
+
+                {% block sw_settings_user_detail_detail_modal %}
+                    <sw-modal v-if="currentIntegration"
+                              size="550px"
+                              class="sw_settings_user_detail__detail"
+                              :isLoading="isModalLoading"
+                              :title="showSecretAccessKey ? $tc('sw-settings-user.user-detail.modal.detailModalTitle') : $tc('sw-settings-user.user-detail.modal.detailModalTitleEdit')"
+                              @modal-close="onCloseDetailModal">
+                        {% block sw_settings_user_detail_detail_modal_inner %}
+
+                            <div class="sw-field">
+                                <label>{{ $tc('sw-settings-user.user-detail.modal.permissions') }}</label>
+
+                                <sw-container columns="repeat(auto-fit, minmax(200px, 1fr)">
+                                    {% block sw_settings_user_detail_detail_modal_inner_field_readaccess %}
+                                        <sw-field :label="$tc('sw-settings-user.user-detail.modal.readAccessFieldLabel')"
+                                                  :value="true"
+                                                  disabled="disabled"
+                                                  type="checkbox">
+                                        </sw-field>
+                                    {% endblock %}
+
+                                    {% block sw_settings_user_detail_detail_modal_inner_field_writeaccess %}
+                                        <sw-field :label="$tc('sw-settings-user.user-detail.modal.writeAccessFieldLabel')"
+                                                  type="checkbox"
+                                                  v-model="currentIntegration.writeAccess">
+                                        </sw-field>
+                                    {% endblock %}
+                                </sw-container>
+                            </div>
+
+                            {% block sw_settings_user_detail_detail_modal_inner_field_accesskey %}
+                                <sw-field :label="$tc('sw-settings-user.user-detail.modal.idFieldLabel')"
+                                          :disabled="true"
+                                          v-model="currentIntegration.accessKey"
+                                          :copyAble="true"
+                                          :copyAbleTooltip="true">
+                                </sw-field>
+                            {% endblock %}
+
+                            {% block sw_settings_user_detail_detail_modal_inner_field_secretaccesskey %}
+                                <sw-field v-if="showSecretAccessKey"
+                                          :type="secretAccessKeyFieldType"
+                                          :label="$tc('sw-settings-user.user-detail.modal.secretFieldLabel')"
+                                          :disabled="true"
+                                          v-model="currentIntegration.secretAccessKey"
+                                          :passwordToggleAble="false"
+                                          :copyAble="showSecretAccessKey"
+                                          :copyAbleTooltip="true">
+                                </sw-field>
+
+                                <sw-button v-if="!showSecretAccessKey"
+                                           @click="addAccessKey"
+                                           variant="danger"
+                                           :block="true">
+                                    {{ $tc('sw-settings-user.user-detail.modal.buttonCreateNewApiKeys') }}
+                                </sw-button>
+
+                                {% block sw_settings_user_detail_detail_modal_inner_field_helpText %}
+                                    <sw-field-helptext
+                                            v-if="!showSecretAccessKey"
+                                            :id="currentIntegration.id"
+                                            :helpText="$tc('sw-settings-user.user-detail.modal.hintCreateNewApiKeys')">
+                                    </sw-field-helptext>
+                                {% endblock %}
+                            {% endblock %}
+
+                            {% block sw_settings_user_detail_detail_modal_inner_helptext %}
+                                <sw-alert v-if="showSecretAccessKey"
+                                          variant="warning"
+                                          class="sw_settings_user_detail__secret-help-text-alert">
+                                    {{ $tc('sw-settings-user.user-detail.modal.secretHelpText') }}
+                                </sw-alert>
+                            {% endblock %}
+
+                            {% block sw_settings_user_detail_detail_modal_inner_footer %}
+                                <template v-slot:modal-footer>
+                                    {% block sw_settings_user_detail_detail_modal_inner_footer_cancel %}
+                                        <sw-button size="small" @click="onCloseDetailModal" :disabled="isModalLoading">
+                                            {{ $tc('sw-settings-user.user-detail.modal.buttonCancel') }}
+                                        </sw-button>
+                                    {% endblock %}
+
+                                    {% block sw_settings_user_detail_detail_modal_inner_footer_apply %}
+                                        <sw-button size="small"
+                                                   class="sw_settings_user_detail__save-action"
+                                                   :disabled="isModalLoading && !!currentIntegration.label"
+                                                   variant="primary"
+                                                   @click="onSaveIntegration">
+                                            {{ showSecretAccessKey ? $tc('sw-settings-user.user-detail.modal.buttonApply') : $tc('sw-settings-user.user-detail.modal.buttonApplyEdit') }}
+                                        </sw-button>
+                                    {% endblock %}
+                                </template>
+                            {% endblock %}
+                        {% endblock %}
+                    </sw-modal>
+                {% endblock %}
             </template>
         {% endblock %}
     </sw-page>
