NTR - Refactor plugin entity

--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
@@ -122,7 +122,7 @@
 
                                                     <template v-if="item.customFields">
                                                         {% block sw_plugin_list_grid_columns_actions_settings %}
-                                                        <sw-context-menu-item v-if="item.customFields.config" @click="onPluginSettings(item)">
+                                                        <sw-context-menu-item v-if="item.customFields.configAvailable" @click="onPluginSettings(item)">
                                                             {{ $tc('sw-plugin.list.config') }}
                                                         </sw-context-menu-item>
                                                         {% endblock %}
