--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -64,7 +64,7 @@
             <template slot="content">
 
                 {% block sw_category_content_view %}
-                    <sw-category-view v-if="!isMobileViewport && (category && cmsPage) || isMobileViewport && (category && cmsPage)"
+                    <sw-category-view v-if="category"
                         ref="categoryView"
                         :category="category"
                         :cmsPage="cmsPage"
